@@ -5,3 +5,4 @@ heantaihavenco - fix listing
 spankbang - fix search pagination
 new sites - youcrazyx, yrprn, trendyporn, yespornplease, blendporn
 cherrytv - fix listing and playback
+avple - fix playback
